--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
                 android:label="@string/app_name"/>
 
         <activity
-                android:name="com.animationexample.rocketlaunch.animationactivities.LaunchAndSpinAnimatorSetAnimatorActivity"
+                android:name="com.animationexample.rocketlaunch.animationactivities.LaunchAndSpinRocket"
                 android:label="@string/app_name"/>
 
         <activity
