--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,11 +60,11 @@
                 android:label="@string/app_name"/>
 
         <activity
-                android:name="com.animationexample.rocketlaunch.animationactivities.LaunchAndSpinRocket"
+                android:name="com.animationexample.rocketlaunch.animationactivities.LaunchAndSpin"
                 android:label="@string/app_name"/>
 
         <activity
-                android:name="com.animationexample.rocketlaunch.animationactivities.LaunchAndSpinViewPropertyAnimatorAnimationActivity"
+                android:name="com.animationexample.rocketlaunch.animationactivities.LaunchAndSpinViewPropertyAnimator"
                 android:label="@string/app_name"/>
 
         <activity
