--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,7 +68,7 @@
                 android:label="@string/app_name"/>
 
         <activity
-                android:name="com.animationexample.rocketlaunch.animationactivities.FlyWithDogeAnimationActivity"
+                android:name="com.animationexample.rocketlaunch.animationactivities.FlyDoge"
                 android:label="@string/app_name"/>
 
         <activity
