--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,7 @@
                 android:label="@string/app_name"/>
 
         <activity
-                android:name="com.animationexample.rocketlaunch.animationactivities.WithListenerAnimationActivity"
+                android:name="com.animationexample.rocketlaunch.animationactivities.AnimationListener"
                 android:label="@string/app_name"/>
 
         <activity
