Adding repeat mode and count (animation options) and animator set.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
                 android:label="@string/app_name"/>
 
         <activity
-                android:name="com.animationexample.rocketlaunch.animationactivities.FlyThereAndBackAnimationActivity"
+                android:name="com.animationexample.rocketlaunch.animationactivities.AnimationOptions"
                 android:label="@string/app_name"/>
 
         <activity
