--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/MyTheme.NoActionBar">
 
         <activity
                 android:name="com.animationexample.rocketlaunch.ListActivity"
